# CCTV-MONITORING-TOOL

./: .dockerignore  .env.example  .gitignore  .mcp.json  DEPLOYMENT_INFO.md  alembic.ini  devices.seed.yaml  docker-compose.yml  pyproject.toml  start.bat  stop.bat
.claude/: settings.json
.scripts/: backend.bat  frontend.bat  telegram.bat
deploy/: .env.example  Caddyfile  DEPLOY.md  Dockerfile.backend  Dockerfile.caddy  docker-compose.prod.yml  docker-entrypoint.sh
deploy/scripts/: db-backup.sh
docs/architecture/: mvp-architecture-report.md  mvp_improvements.md
docs/guides/: startup-guide.md
docs/plans/: 2026-03-07-dashboard-design.md  2026-03-07-dashboard-implementation.md  2026-03-07-monitoring-system-v2-design.md  2026-03-07-monitoring-system-v2-plan.md  2026-03-07-mvp-architecture-design.md  2026-03-07-mvp-implementation-plan.md  2026-03-07-sdk-transport-design.md  2026-03-07-sdk-transport-implementation.md  2026-03-09-frontend-theme-i18n-responsive-design.md  2026-03-09-frontend-theme-i18n-responsive-plan.md  2026-03-09-telegram-integration-design-and-implementation-plan.md  2026-03-12-paginated-snapshots-design.md  2026-03-12-paginated-snapshots-plan.md
docs/research/: CCTV_MONITORING_RESEARCH_DRAFT.md
docs/vendors/: VERIFIED_ENDPOINTS.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  i18n.ts  theme.ts  types.ts
migrations/: env.py
migrations/versions/: 0001_initial_tables.py  0002_v2_schema.py  0003_poll_interval.py  0008_folders.py  (+9 more)
scripts/: check_smart.py  check_smart_sdk.py  import_devices.py
(+120 files in other folders)
